--- a/test.yaml
+++ b/test.yaml
@@ -1,3 +1,27 @@
+plugins:
+  sites:
+    - id: "default"
+      url: "http://updates.jenkins-ci.org/update-center.json"
+jenkins:
+  agentProtocols:
+    - "CLI-connect"
+    - "CLI2-connect"
+    - "JNLP-connect"
+    - "JNLP2-connect"
+    - "JNLP4-connect"
+    - "Ping"
+  disableRememberMe: false
+  mode: NORMAL
+  numExecutors: 2
+  primaryView:
+    all:
+      name: "all"
+  quietPeriod: 5
+  scmCheckoutRetryCount: 0
+  slaveAgentPort: 0
+  views:
+    - all:
+        name: "all"
 tool:
   jdk:
     defaultProperties:
@@ -5,3 +29,7 @@ tool:
           installers:
             - jdkInstaller:
                 acceptLicense: false
+  git:
+    installations:
+      - name: git
+        home: /usr/local/bin/git
